# UA-Stache-API

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
ua_stache_api/: ua_stache_api.py
ua_stache_api/tests/: test_get.json  test_post.json  test_stache_token.json  test_ua_stache_api.py
